--- a/.github/workflows/e2eTests.yml
+++ b/.github/workflows/e2eTests.yml
@@ -45,3 +45,30 @@ jobs:
         with:
           name: Windows_Edge_Local_Allure
           path: "extent-reports/ExtentReports_*.html"
+  Liniux_Chrome_Local:
+   runs-on: ubuntu-latest
+   steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'zulu'
+        cache: 'maven'
+        check-latest: true
+    - name: Run tests
+      continue-on-error: true
+      run: mvn -e test "-DexecutionAddress=local" "-DtargetOperatingSystem=LINUX" "-DtargetBrowserName=chrome" "-DheadlessExecution=true" "-DgenerateAllureReportArchive=true" "-Dtest=${TESTING_SCOPE}"
+    - name: Upload Allure Report as Pipeline Artifact
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: Linux_Edge_Local_Allure
+        path: "generatedReport_*.zip"
+    - name: Upload Execution Summary Report as Pipeline Artifact
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: Linux_Edge_Local_Summary
+        path: "execution-summary/ExecutionSummaryReport_*.html"
